force-app/main/default/objects/TempTerritory__c/TempTerritory__c.object-meta.xml
<CustomObject>
    <label>Temp Territory</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>