force-app/main/default/objects/TempTerritory__c/fields/FolderName__c.field-meta.xml
<CustomField>
    <fullName>FolderName__c</fullName>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>