force-app/main/default/objects/TempTerritory__c/fields/ShapeLayerName__c.field-meta.xml
<CustomField>
    <fullName>ShapeLayerName__c</fullName>
    <label>Shape Layer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>